--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,3 @@
-<!--
-  Hello!
-  -
-  Simplefolio is a clean and responsive portfolio template for Developers!
-  Created by Jacobo Martinez.
-  -
-  Github Repo: https://github.com/cobidev/simplefolio/
-  Readme: https://github.com/cobidev/simplefolio/README.md
-  -
-  For business & inquires, contact me -> jacobojavier98@gmail.com
--->
 <!DOCTYPE html>
 <html lang="en" class="sr">
   <head>
@@ -20,9 +9,12 @@
     <!-- Todo: put here your site title -->
     <title>Gideon Nwokpor | Developer</title>
     <!-- Todo: add some coding keywords below - e.g: (javascript, yourusername, etc) -->
-    <meta name="keywords" content="[username], [name], skill" />
+    <meta
+      name="keywords"
+      content="Gideon-cyber, Gideon Nwokpor, HTML, CSS, SCSS, JavaScript, React"
+    />
     <!-- Todo: improve your SEO by adding a small description of you -->
-    <meta name="description" content="[Your name here] | Developer" />
+    <meta name="description" content="Gideon Nwokpor | Developer" />
 
     <link
       rel="stylesheet"
@@ -125,7 +117,10 @@
                   <p class="mb-4">
                     Alpha-gen is a DP auto generator platform where users can
                     create and share personalized DPs' that will increase their
-                    campaign reach and also give their events more visibility.
+                    campaign reach and also give their events more
+                    visibility.<br />
+                    This project ranked top amongst the top 3 solutions in an
+                    hackathon
                   </p>
                 </div>
                 <a
