update to portfolio

--- a/src/index.html
+++ b/src/index.html
@@ -73,7 +73,7 @@
               <p class="about-wrapper__info-text">
                 I am a frontend developer with 2+ years experience in HTML, CSS
                 and JavaScript. I have also worked with libraries like SCSS and
-                JQuery, with little experience in React. As a great team player,
+                JQuery, with some experience in React. As a great team player,
                 with the ability to adapt, and willingness to learn, I always
                 give my best in ensuring the team set goals are achieved.<br />
                 While leading a four-man team in an hackathon organised by
@@ -90,7 +90,7 @@
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn cta-btn--resume"
-                  href="assets/GideonCV-new.pdf"
+                  href="assets/Gid-resume.pdf"
                 >
                   View Resume
                 </a>
