--- a/src/index.html
+++ b/src/index.html
@@ -72,8 +72,8 @@
             <div class="about-wrapper__info load-hidden">
               <p class="about-wrapper__info-text">
                 I am a frontend developer with 2+ years experience in HTML, CSS
-                and JavaScript. I have also worked with libraries like SCSS and
-                JQuery, with some experience in React. As a great team player,
+                and JavaScript. I have also worked with libraries like SCSS,
+                jQuery, and have experience using React. As a great team player,
                 with the ability to adapt, and willingness to learn, I always
                 give my best in ensuring the team set goals are achieved.<br />
                 While leading a four-man team in an hackathon organised by
@@ -112,6 +112,64 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text load-hidden">
+                <h3 class="project-wrapper__text-title">
+                  Soundgasm landing page redo
+                </h3>
+                <div>
+                  <p class="mb-4">
+                    Built another landing page for the soundgasm website using
+                    <span class="text-color-main">React</span> and
+                    <span class="text-color-main">Tailwind CSS</span>
+                  </p>
+                </div>
+                <a
+                  rel="noreferrer"
+                  target="_blank"
+                  class="cta-btn cta-btn--hero"
+                  href="https://soundgasm.vercel.app"
+                >
+                  See Live
+                </a>
+                <a
+                  rel="noreferrer"
+                  target="_blank"
+                  class="cta-btn text-color-main"
+                  href="https://github.com/Gideon-cyber/soundgasm-new"
+                >
+                  Source Code
+                </a>
+              </div>
+            </div>
+            <div class="col-lg-8 col-sm-12">
+              <div class="project-wrapper__image load-hidden">
+                <a
+                  rel="noreferrer"
+                  href="https://soundgasm.vercel.app"
+                  target="_blank"
+                >
+                  <div
+                    data-tilt
+                    data-tilt-max="4"
+                    data-tilt-glare="true"
+                    data-tilt-max-glare="0.5"
+                    class="thumbnail rounded js-tilt"
+                  >
+                    <img
+                      alt="Project Image"
+                      class="img-fluid"
+                      src="assets/Soundgasm2.jpg"
+                    />
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+          <!-- /END Project -->
+
+          <!-- Notice: each .row is a project -->
+          <div class="row">
+            <div class="col-lg-4 col-sm-12">
+              <div class="project-wrapper__text load-hidden">
                 <h3 class="project-wrapper__text-title">Alpha-gen</h3>
                 <div>
                   <p class="mb-4">
@@ -120,7 +178,10 @@
                     campaign reach and also give their events more
                     visibility.<br />
                     This project ranked top amongst the top 3 solutions in an
-                    hackathon
+                    hackathon, and was built with
+                    <span class="text-color-main">HTML</span>,
+                    <span class="text-color-main">CSS</span>, and
+                    <span class="text-color-main">JavaScript</span>
                   </p>
                 </div>
                 <a
@@ -135,7 +196,7 @@
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn text-color-main"
-                  href="https://github.com/Gideon-cyber/csb-e2esev"
+                  href="https://github.com/Gideon-cyber/alphagen"
                 >
                   Source Code
                 </a>
@@ -178,7 +239,11 @@
                   <p class="mb-4">
                     Implementing designs gotten from a template using clean,
                     reusable components. Ensuring optimization for phone devices
-                    and optimized web pages for maximum speed and scalability.
+                    and optimized web pages for maximum speed and
+                    scalability.<br />
+                    I built it using <span class="text-color-main">HTML</span>,
+                    <span class="text-color-main">SCSS</span>, and
+                    <span class="text-color-main">JavaScript</span>
                   </p>
                 </div>
                 <a
@@ -230,12 +295,76 @@
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text load-hidden">
                 <h3 class="project-wrapper__text-title">
+                  Nigeria leaders website
+                </h3>
+                <div>
+                  <p class="mb-4">
+                    A simple website showing the all the leaders of my country
+                    Nigeria from its independence in 1960. I adding a search
+                    button that filters based on search option, leaders name
+                    that matches search text.<br />
+                    I built it with
+                    <span class="text-color-main">React.js</span>.
+                  </p>
+                </div>
+                <a
+                  rel="noreferrer"
+                  target="_blank"
+                  class="cta-btn cta-btn--hero"
+                  href="https://nig-leaders.vercel.app"
+                >
+                  See Live
+                </a>
+                <a
+                  rel="noreferrer"
+                  target="_blank"
+                  class="cta-btn text-color-main"
+                  href="https://github.com/Gideon-cyber/nigeria-leaders"
+                >
+                  Source Code
+                </a>
+              </div>
+            </div>
+            <div class="col-lg-8 col-sm-12">
+              <div class="project-wrapper__image load-hidden">
+                <a
+                  rel="noreferrer"
+                  href="https://nig-leaders.vercel.app"
+                  target="_blank"
+                >
+                  <div
+                    data-tilt
+                    data-tilt-max="4"
+                    data-tilt-glare="true"
+                    data-tilt-max-glare="0.5"
+                    class="thumbnail rounded js-tilt"
+                  >
+                    <img
+                      alt="Project Image"
+                      class="img-fluid"
+                      src="assets/nig-leaders.jpg"
+                    />
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+          <!-- /END Project -->
+
+          <!-- Notice: each .row is a project -->
+          <div class="row">
+            <div class="col-lg-4 col-sm-12">
+              <div class="project-wrapper__text load-hidden">
+                <h3 class="project-wrapper__text-title">
                   Soundgasm Landing page
                 </h3>
                 <div>
                   <p class="mb-4">
                     Soundgasm is a website that allows you listen to your
-                    favourite musicians from around the world.
+                    favourite musicians from around the world. Built using
+                    <span class="text-color-main">HTML</span>,
+                    <span class="text-color-main">CSS</span>, and
+                    <span class="text-color-main">JavaScript</span>
                   </p>
                 </div>
                 <a
