--- a/src/index.html
+++ b/src/index.html
@@ -71,11 +71,15 @@
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__info load-hidden">
               <p class="about-wrapper__info-text">
-                I am a frontend developer with 2+ years experience in HTML, CSS
-                and JavaScript. I have also worked with libraries like SCSS,
-                jQuery, and have experience using React. As a great team player,
-                with the ability to adapt, and willingness to learn, I always
-                give my best in ensuring the team set goals are achieved.<br />
+                I am a frontend developer with 2+ years in building scalable web
+                applications using HTML, CSS, JavaScript, and React. I also have
+                experience in managing state using both Context API and Redux,
+                consuming API using both fetch API and axios,NPM, as well as
+                Version control using Git and Github.
+                <br />I have also worked with libraries like SCSS, jQuery. As a
+                great team player, with the ability to adapt, and willingness to
+                learn, I always give my best in ensuring the team set goals are
+                achieved.<br />
                 While leading a four-man team in an hackathon organised by
                 CodeSandBox and Ingressive4Good, my team and I was able to build
                 a DP generator web application that generates DPs' for events.
@@ -107,6 +111,65 @@
       <div class="container">
         <div class="project-wrapper">
           <h2 class="section-title dark-blue-text">Projects</h2>
+
+          <!-- Notice: each .row is a project -->
+          <div class="row">
+            <div class="col-lg-4 col-sm-12">
+              <div class="project-wrapper__text load-hidden">
+                <h3 class="project-wrapper__text-title">NFT MetaPool</h3>
+                <div>
+                  <p class="mb-4">
+                    Built the front-end user interface for a decentralized
+                    application for mining usdt on the blockchain using
+                    <span class="text-color-main">React</span>,
+                    <span class="text-color-main">Redux</span> for state
+                    management, and
+                    <span class="text-color-main">Material UI</span>
+                  </p>
+                </div>
+                <a
+                  rel="noreferrer"
+                  target="_blank"
+                  class="cta-btn cta-btn--hero"
+                  href="https://www.nftsmetapool.com"
+                >
+                  See Live
+                </a>
+                <!-- <a
+                  rel="noreferrer"
+                  target="_blank"
+                  class="cta-btn text-color-main"
+                  href="https://github.com/Gideon-cyber/soundgasm-new"
+                >
+                  Source Code
+                </a> -->
+              </div>
+            </div>
+            <div class="col-lg-8 col-sm-12">
+              <div class="project-wrapper__image load-hidden">
+                <a
+                  rel="noreferrer"
+                  href="https://www.nftsmetapool.com"
+                  target="_blank"
+                >
+                  <div
+                    data-tilt
+                    data-tilt-max="4"
+                    data-tilt-glare="true"
+                    data-tilt-max-glare="0.5"
+                    class="thumbnail rounded js-tilt"
+                  >
+                    <img
+                      alt="Project Image"
+                      class="img-fluid"
+                      src="assets/nftmeta.png"
+                    />
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+          <!-- /END Project -->
 
           <!-- Notice: each .row is a project -->
           <div class="row">
@@ -421,13 +484,13 @@
         <h2 class="section-title">Contact Me</h2>
         <div class="contact-wrapper load-hidden">
           <p class="contact-wrapper__text">
-            I would love to work with you<br />Gmail: gideonjohnson70@gmail.com
+            I would love to work with you<br />Gmail: gidnwokpor@gmail.com
           </p>
           <a
             rel="noreferrer"
             target="_blank"
             class="cta-btn cta-btn--resume"
-            href="mailto: gideonjohnson70@gmail.com"
+            href="mailto: gidnwokpor@gmail.com"
             >Send a Mail</a
           >
         </div>
@@ -477,30 +540,6 @@
             >Gideon Nwokpor</a
           >
         </p>
-
-        <!-- TO DO: remove this entire paragraph once you finish your portfolio -->
-        <!-- <p class="mt-3 pt-3">
-          <a
-            rel="noreferrer"
-            class="github-button"
-            href="https://github.com/cobidev/simplefolio/fork"
-            data-icon="octicon-repo-forked"
-            data-size="large"
-            data-show-count="true"
-            aria-label="Fork ntkme/github-buttons on GitHub"
-            >Fork</a
-          >
-          <a
-            rel="noreferrer"
-            class="github-button"
-            href="https://github.com/cobidev/simplefolio"
-            data-icon="octicon-star"
-            data-size="large"
-            data-show-count="true"
-            aria-label="Star cobidev/simplefolio on GitHub"
-            >Star</a
-          >
-        </p> -->
       </div>
     </footer>
     <!-- /END Footer Section -->
