update to portfolio

--- a/src/index.html
+++ b/src/index.html
@@ -72,29 +72,27 @@
             <div class="about-wrapper__info load-hidden">
               <p class="about-wrapper__info-text">
                 I am a frontend developer with 2+ years in building scalable web
-                applications using HTML, CSS, JavaScript, and React. I also have
-                experience in managing state using both Context API and Redux,
-                consuming API using both fetch API and axios,NPM, as well as
-                Version control using Git and Github.
-                <br />I have also worked with libraries like SCSS, jQuery. As a
-                great team player, with the ability to adapt, and willingness to
-                learn, I always give my best in ensuring the team set goals are
-                achieved.<br />
+                applications using HTML, CSS, JavaScript, React.js, next.js, and
+                TypeScript. I also have experience in managing state using both
+                Context API and Redux, consuming API using both fetch API and
+                axios,NPM, as well as Version control using Git and Github.
+                <br />I have also worked with libraries like SCSS, jQuery.<br />As
+                a great team player, with the ability to adapt, and willingness
+                to learn, I always give my best in ensuring the team set goals
+                are achieved.<br />
+              </p>
+              <p class="about-wrapper__info-text">
                 While leading a four-man team in an hackathon organised by
                 CodeSandBox and Ingressive4Good, my team and I was able to build
                 a DP generator web application that generates DPs' for events.
                 Our product/solution ranked top 3 in the hackathon.
-              </p>
-              <p class="about-wrapper__info-text">
-                I'm working towards becoming a software engineer in the nearest
-                future.
               </p>
               <span class="d-flex mt-3">
                 <a
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn cta-btn--resume"
-                  href="assets/Gid-resume.pdf"
+                  href="assets/GIDEON-res.pdf"
                 >
                   View Resume
                 </a>
@@ -163,6 +161,134 @@
                       alt="Project Image"
                       class="img-fluid"
                       src="assets/nftmeta.png"
+                    />
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+          <!-- /END Project -->
+
+          <!-- Notice: each .row is a project -->
+          <div class="row">
+            <div class="col-lg-4 col-sm-12">
+              <div class="project-wrapper__text load-hidden">
+                <h3 class="project-wrapper__text-title">
+                  Crown Clothing E-Commerce website
+                </h3>
+                <div>
+                  <p class="mb-4">
+                    Built complete E-commerce website for a clothing store using
+                    <span class="text-color-main">React</span>,
+                    <span class="text-color-main">Redux</span> for state
+                    management,
+                    <span class="text-color-main">Firebase Firestore</span> as
+                    database, and
+                    <span class="text-color-main">Stripe API</span> for
+                    accepting payments.
+                  </p>
+                </div>
+                <a
+                  rel="noreferrer"
+                  target="_blank"
+                  class="cta-btn cta-btn--hero"
+                  href="https://crwn-clothing-blond.vercel.app"
+                >
+                  See Live
+                </a>
+                <a
+                  rel="noreferrer"
+                  target="_blank"
+                  class="cta-btn text-color-main"
+                  href="https://github.com/Gideon-cyber/crwn-clothing"
+                >
+                  Source Code
+                </a>
+              </div>
+            </div>
+            <div class="col-lg-8 col-sm-12">
+              <div class="project-wrapper__image load-hidden">
+                <a
+                  rel="noreferrer"
+                  href="https://crwn-clothing-blond.vercel.app"
+                  target="_blank"
+                >
+                  <div
+                    data-tilt
+                    data-tilt-max="4"
+                    data-tilt-glare="true"
+                    data-tilt-max-glare="0.5"
+                    class="thumbnail rounded js-tilt"
+                  >
+                    <img
+                      alt="Project Image"
+                      class="img-fluid"
+                      src="assets/crown.png"
+                    />
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+          <!-- /END Project -->
+
+          <!-- Notice: each .row is a project -->
+          <div class="row">
+            <div class="col-lg-4 col-sm-12">
+              <div class="project-wrapper__text load-hidden">
+                <h3 class="project-wrapper__text-title">
+                  Lighthouse Company Website
+                </h3>
+                <div>
+                  <p class="mb-4">
+                    Built the complete company website for Lighthouse HR Company
+                    using
+                    <span class="text-color-main">HTML, SCSS, JavaScript</span>,
+                    <span class="text-color-main">Elastic Mail</span> for email
+                    functionality,
+                    <span class="text-color-main">AOS</span>library for
+                    animations, and
+
+                    <span class="text-color-main">Paystack</span> for accepting
+                    payments
+                  </p>
+                </div>
+                <a
+                  rel="noreferrer"
+                  target="_blank"
+                  class="cta-btn cta-btn--hero"
+                  href="https://lighthousehrcompany.com.ng"
+                >
+                  See Live
+                </a>
+                <!-- <a
+                  rel="noreferrer"
+                  target="_blank"
+                  class="cta-btn text-color-main"
+                  href="https://github.com/Gideon-cyber/soundgasm-new"
+                >
+                  Source Code
+                </a> -->
+              </div>
+            </div>
+            <div class="col-lg-8 col-sm-12">
+              <div class="project-wrapper__image load-hidden">
+                <a
+                  rel="noreferrer"
+                  href="https://lighthousehrcompany.com.ng"
+                  target="_blank"
+                >
+                  <div
+                    data-tilt
+                    data-tilt-max="4"
+                    data-tilt-glare="true"
+                    data-tilt-max-glare="0.5"
+                    class="thumbnail rounded js-tilt"
+                  >
+                    <img
+                      alt="Project Image"
+                      class="img-fluid"
+                      src="assets/lighthouse.png"
                     />
                   </div>
                 </a>
