--- a/src/index.html
+++ b/src/index.html
@@ -491,6 +491,33 @@
                 >
                   Source Code
                 </a>
+                 </div>
+            </div>
+            <div class="col-lg-8 col-sm-12">
+              <div class="project-wrapper__image load-hidden">
+                <a
+                  rel="noreferrer"
+                  href="https://nig-leaders.vercel.app"
+                  target="_blank"
+                >
+                  <div
+                    data-tilt
+                    data-tilt-max="4"
+                    data-tilt-glare="true"
+                    data-tilt-max-glare="0.5"
+                    class="thumbnail rounded js-tilt"
+                  >
+                    <img
+                      alt="Project Image"
+                      class="img-fluid"
+                      src="assets/nig-leaders.jpg"
+                    />
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+
 
                 <!-- Notice: each .row is a project -->
           <div class="row">
@@ -516,16 +543,15 @@
                 >
                   See Live
                 </a>
-                <a
+                 <a
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn text-color-main"
-                  href="https://github.com/PatrickEinstein/NFTlist"
+                  href="#"
                 >
                   Source Code
                 </a>
-
-              </div>
+               </div>
             </div>
             <div class="col-lg-8 col-sm-12">
               <div class="project-wrapper__image load-hidden">
@@ -544,7 +570,7 @@
                     <img
                       alt="Project Image"
                       class="img-fluid"
-                      src="assets/nig-leaders.jpg"
+                      src="assets/rolodex.png"
                     />
                   </div>
                 </a>
