--- a/src/index.html
+++ b/src/index.html
@@ -110,6 +110,132 @@
         <div class="project-wrapper">
           <h2 class="section-title dark-blue-text">Projects</h2>
 
+           <!-- Notice: each .row is a project -->
+          <div class="row">
+            <div class="col-lg-4 col-sm-12">
+              <div class="project-wrapper__text load-hidden">
+                <h3 class="project-wrapper__text-title">
+                  AmazingGrace e-commerce website
+                </h3>
+                <div>
+                  <p class="mb-4">
+                    Built complete E-commerce website for a clothing store using
+                    <span class="text-color-main">React</span>,
+                    <span class="text-color-main">Redux</span> for state
+                    management,
+                    <span class="text-color-main">Firebase Firestore</span> as
+                    database, and
+                    <span class="text-color-main">Stripe API</span> for
+                    accepting payments.
+                  </p>
+                  <span class="text-color-main">Whatsapp social media</span> for
+                    live chat.
+                  </p>
+                </div>
+                <a
+                  rel="noreferrer"
+                  target="_blank"
+                  class="cta-btn cta-btn--hero"
+                  href="https://exquisite-fudge-56193e.netlify.app/"
+                >
+                  See Live
+                </a>
+                <a
+                  rel="noreferrer"
+                  target="_blank"
+                  class="cta-btn text-color-main"
+                  href="https://github.com/PatrickEinstein/Wearmall"
+                >
+                  Source Code
+                </a>
+              </div>
+            </div>
+            <div class="col-lg-8 col-sm-12">
+              <div class="project-wrapper__image load-hidden">
+                <a
+                  rel="noreferrer"
+                  href="https://exquisite-fudge-56193e.netlify.app/"
+                  target="_blank"
+                >
+                  <div
+                    data-tilt
+                    data-tilt-max="4"
+                    data-tilt-glare="true"
+                    data-tilt-max-glare="0.5"
+                    class="thumbnail rounded js-tilt"
+                  >
+                    <img
+                      alt="Project Image"
+                      class="img-fluid"
+                      src="assets/amazing.png"
+                    />
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+          <!-- /END Project -->
+
+           <!-- Notice: each .row is a project -->
+          <div class="row">
+            <div class="col-lg-4 col-sm-12">
+              <div class="project-wrapper__text load-hidden">
+                <h3 class="project-wrapper__text-title">
+                  CRUD MERNSTACK APP
+                </h3>
+                <div>
+                  <p class="mb-4">
+                    It can be used as a community chatting app as it is a Fullstack website
+                    <span class="text-color-main">MongoDB</span>,
+                    <span class="text-color-main">Express</span> 
+                    <span class="text-color-main">React</span>
+                    <span class="text-color-main">Nodejs</span>
+                  </p>
+                </div>
+                <a
+                  rel="noreferrer"
+                  target="_blank"
+                  class="cta-btn cta-btn--hero"
+                  href="https://crudmernstack.vercel.app/"
+                >
+                  See Live
+                </a>
+                <a
+                  rel="noreferrer"
+                  target="_blank"
+                  class="cta-btn text-color-main"
+                  href="https://github.com/PatrickEinstein/CRUD"
+                >
+                  Source Code
+                </a>
+              </div>
+            </div>
+            <div class="col-lg-8 col-sm-12">
+              <div class="project-wrapper__image load-hidden">
+                <a
+                  rel="noreferrer"
+                  href="https://crudmernstack.vercel.app/"
+                  target="_blank"
+                >
+                  <div
+                    data-tilt
+                    data-tilt-max="4"
+                    data-tilt-glare="true"
+                    data-tilt-max-glare="0.5"
+                    class="thumbnail rounded js-tilt"
+                  >
+                    <img
+                      alt="Project Image"
+                      class="img-fluid"
+                      src="assets/CRUD.png"
+                    />
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+          <!-- /END Project -->
+
           <!-- Notice: each .row is a project -->
           <div class="row">
             <div class="col-lg-4 col-sm-12">
@@ -169,68 +295,7 @@
           </div>
           <!-- /END Project -->
 
-          <!-- Notice: each .row is a project -->
-          <div class="row">
-            <div class="col-lg-4 col-sm-12">
-              <div class="project-wrapper__text load-hidden">
-                <h3 class="project-wrapper__text-title">
-                  AmazingGrace e-commerce website
-                </h3>
-                <div>
-                  <p class="mb-4">
-                    Built complete E-commerce website for a clothing store using
-                    <span class="text-color-main">React</span>,
-                    <span class="text-color-main">Redux</span> for state
-                    management,
-                    <span class="text-color-main">Firebase Firestore</span> as
-                    database, and
-                    <span class="text-color-main">Stripe API</span> for
-                    accepting payments.
-                  </p>
-                </div>
-                <a
-                  rel="noreferrer"
-                  target="_blank"
-                  class="cta-btn cta-btn--hero"
-                  href="https://crwn-clothing-blond.vercel.app"
-                >
-                  See Live
-                </a>
-                <a
-                  rel="noreferrer"
-                  target="_blank"
-                  class="cta-btn text-color-main"
-                  href="https://github.com/PatrickEinstein/Wearmall"
-                >
-                  Source Code
-                </a>
-              </div>
-            </div>
-            <div class="col-lg-8 col-sm-12">
-              <div class="project-wrapper__image load-hidden">
-                <a
-                  rel="noreferrer"
-                  href="https://crwn-clothing-blond.vercel.app"
-                  target="_blank"
-                >
-                  <div
-                    data-tilt
-                    data-tilt-max="4"
-                    data-tilt-glare="true"
-                    data-tilt-max-glare="0.5"
-                    class="thumbnail rounded js-tilt"
-                  >
-                    <img
-                      alt="Project Image"
-                      class="img-fluid"
-                      src="assets/AmazingGraceStores.png"
-                    />
-                  </div>
-                </a>
-              </div>
-            </div>
-          </div>
-          <!-- /END Project -->
+         
 
           <!-- Notice: each .row is a project -->
           <div class="row">
@@ -547,7 +612,7 @@
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn text-color-main"
-                  href="#"
+                  href="https://github.com/PatrickEinstein/NFTlist"
                 >
                   Source Code
                 </a>
