--- a/src/index.html
+++ b/src/index.html
@@ -112,7 +112,136 @@
 
 
 
-         
+          <!-- Notice: each .row is a project -->
+          <div class="row">
+            <div class="col-lg-4 col-sm-12">
+              <div class="project-wrapper__text load-hidden">
+                <h3 class="project-wrapper__text-title">
+                  Retro Pay investment Website
+                </h3>
+                <div>
+                  <p class="mb-4">
+                    A Fullstack Investment Project
+                    <span class="text-color-main">React</span>,
+                    <span class="text-color-main">Redux</span> for state
+                    management,
+                    <span class="text-color-main">Nodejs and Express js</span> as
+                    backend, and
+                    <span class="text-color-main">MongoDB </span> for
+                    Database.
+                  </p>
+                  <!-- <span class="text-color-main">Whatsapp social media</span> for
+                    live chat.
+                  </p> -->
+                </div>
+                <a
+                  rel="noreferrer"
+                  target="_blank"
+                  class="cta-btn cta-btn--hero"
+                  href="https://vote-verse.vercel.app/login"
+                >
+                  See Live
+                </a>
+                <a
+                  rel="noreferrer"
+                  target="_blank"
+                  class="cta-btn text-color-main"
+                  href="https://github.com/PatrickEinstein/"
+                >
+                  Source Code
+                </a>
+              </div>
+            </div>
+            <div class="col-lg-8 col-sm-12">
+              <div class="project-wrapper__image load-hidden">
+                <a
+                  rel="noreferrer"
+                  href="https://vote-verse.vercel.app/login"
+                  target="_blank"
+                >
+                  <div
+                    data-tilt
+                    data-tilt-max="4"
+                    data-tilt-glare="true"
+                    data-tilt-max-glare="0.5"
+                    class="thumbnail rounded js-tilt"
+                  >
+                    <img
+                      alt="Project Image"
+                      class="img-fluid"
+                      src="assets/vote.png"
+                    />
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <!-- Notice: each .row is a project -->
+          <div class="row">
+            <div class="col-lg-4 col-sm-12">
+              <div class="project-wrapper__text load-hidden">
+                <h3 class="project-wrapper__text-title">
+                  Retro Pay investment Website
+                </h3>
+                <div>
+                  <p class="mb-4">
+                    A Fullstack Investment Project
+                    <span class="text-color-main">React</span>,
+                    <span class="text-color-main">Redux</span> for state
+                    management,
+                    <span class="text-color-main">Nodejs and Express js</span> as
+                    backend, and
+                    <span class="text-color-main">MongoDB </span> for
+                    Database.
+                  </p>
+                  <!-- <span class="text-color-main">Whatsapp social media</span> for
+                    live chat.
+                  </p> -->
+                </div>
+                <a
+                  rel="noreferrer"
+                  target="_blank"
+                  class="cta-btn cta-btn--hero"
+                  href="https://www.retropay.uk/"
+                >
+                  See Live
+                </a>
+                <a
+                  rel="noreferrer"
+                  target="_blank"
+                  class="cta-btn text-color-main"
+                  href="https://github.com/PatrickEinstein/"
+                >
+                  Source Code
+                </a>
+              </div>
+            </div>
+            <div class="col-lg-8 col-sm-12">
+              <div class="project-wrapper__image load-hidden">
+                <a
+                  rel="noreferrer"
+                  href="https://www.retropay.uk/"
+                  target="_blank"
+                >
+                  <div
+                    data-tilt
+                    data-tilt-max="4"
+                    data-tilt-glare="true"
+                    data-tilt-max-glare="0.5"
+                    class="thumbnail rounded js-tilt"
+                  >
+                    <img
+                      alt="Project Image"
+                      class="img-fluid"
+                      src="assets/retropc.png"
+                    />
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+
            <!-- Notice: each .row is a project -->
           <div class="row">
             <div class="col-lg-4 col-sm-12">
